--- a/ommig.html
+++ b/ommig.html
@@ -33,7 +33,7 @@
           <p>Sarah Hvid Pedersen</p>
           <h2 class="citat">“Nysgerrig, idérig og videbegærlig med en naturlig skabertrang”</h2>
           <p>Jeg er 26 vintre gammel og er bosat på Vesterbro, hvor jeg driver min egen lille hobby-virksomhed og studerer til multimediedesigner på KEA.</p>
-          <p>Jeg er drevet af det visuelle og nyder at udfolde mig kreativt. Endvidere er jeg socialt anlagt og bestræber mig på at møde mine medmennesker med aktiv lytning, anerkendelse, nysgerrighed og åbenhed.</p>
+          <p>Jeg er drevet af det visuelle og nyder at udfolde mig kreativt. Endvidere er jeg socialt anlagt og bestræber mig på at møde mine medmennesker med aktiv lytning, anerkendelse, nysgerrighed og åbenhed.</p>
         </div>
         <figure class="img_place1">
           <img class="img_place" src="img/portraet.jpg" alt="Billede af mig" />
